--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -7,6 +7,11 @@ on:
 jobs:
     check-lint:
         runs-on: ubuntu-latest
+
+        defaults:
+            run:
+                working-directory: frontend
+
         steps:
             -   uses: actions/checkout@v4
 
