--- a/user-service/.env.sample
+++ b/user-service/.env.sample
@@ -1,6 +1,6 @@
 DB_CLOUD_URI=<CONNECTION_STRING>
-DB_LOCAL_URI=mongodb://127.0.0.1:27017/peerprepUserServiceDB
-PORT=3001
+DB_LOCAL_URI=mongodb://root:example@mongodb-user-services:27017
+PORT=4000
 
 # Will use cloud MongoDB Atlas database
 ENV=PROD
