Update docker compose to use api gateway

--- a/api-gateway/default.conf
+++ b/api-gateway/default.conf
@@ -5,25 +5,64 @@ server {
 
     #access_log  /var/log/nginx/host.access.log  main;
 
+    # Frontend - Main application
     location / {
-        root   /usr/share/nginx/html;
-        index  index.html index.htm;
+        proxy_pass http://frontend:3000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        
+        # WebSocket support for Next.js dev mode
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
     }
 
-
-    location /user/ {
-        default_type application/json;
-        return 200 '{"message": "User service route working"}';
+    # User Service API
+    location /api/users/ {
+        proxy_pass http://user-service:4000/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        
+        # Handle CORS if needed
+        add_header Access-Control-Allow-Origin *;
+        add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS";
+        add_header Access-Control-Allow-Headers "Content-Type, Authorization";
+        
+        # Handle preflight OPTIONS requests
+        if ($request_method = 'OPTIONS') {
+            return 204;
+        }
     }
 
-    location /matching/ {
-        default_type application/json;
-        return 200 '{"message": "Matching service route working"}';
+    # MongoDB Express Admin Interface (if localdb profile is used)
+    location /admin/ {
+        proxy_pass http://mongo-express:8081/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    location /collab/ {
+    # Health check endpoint
+    location /health {
+        access_log off;
+        return 200 '{"status": "healthy", "timestamp": "$time_iso8601"}';
+        add_header Content-Type application/json;
+    }
+
+    # Future services placeholders
+    location /api/matching/ {
         default_type application/json;
-        return 200 '{"message": "Collaboration service route working"}';
+        return 501 '{"message": "Matching service not yet implemented"}';
+    }
+
+    location /api/collab/ {
+        default_type application/json;
+        return 501 '{"message": "Collaboration service not yet implemented"}';
     }
 
     #error_page  404              /404.html;
