Add npm start / run dev / install shortcuts on root repo

--- a/api-gateway/default.conf
+++ b/api-gateway/default.conf
@@ -21,7 +21,26 @@ server {
 
     # User Service API
     location /api/users/ {
-        proxy_pass http://user-service:4000/;
+        proxy_pass http://user-service:4000/users/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        
+        # Handle CORS if needed
+        add_header Access-Control-Allow-Origin *;
+        add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS";
+        add_header Access-Control-Allow-Headers "Content-Type, Authorization";
+        
+        # Handle preflight OPTIONS requests
+        if ($request_method = 'OPTIONS') {
+            return 204;
+        }
+    }
+
+    # Auth Service API  
+    location /api/auth/ {
+        proxy_pass http://user-service:4000/auth/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
