Resolve Docker networking issue for middleware token verification
Dynamic API client creation to handle different endpoints for server-side (container-to-container) vs client-side (API gateway) requests.

--- a/api-gateway/default.conf
+++ b/api-gateway/default.conf
@@ -1,3 +1,8 @@
+# AI Assistance Disclosure:
+# Tool: GitHub Copilot (model: Claude Sonnet 4), date: 2025-09-16
+# Purpose: To configure Nginx reverse proxy for PeerPrep frontend and user service with proper routing, CORS handling, and Next.js client-side navigation support.
+# Author Review: I validated correctness, security, and performance of the configuration.
+
 server {
     listen       80;
     listen  [::]:80;
@@ -17,6 +22,38 @@ server {
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
+        
+        # Next.js specific headers for proper routing
+        proxy_set_header X-Forwarded-Host $host;
+        proxy_set_header X-Forwarded-Server $host;
+        proxy_redirect off;
+        
+        # Ensure proper handling of Next.js routes
+        try_files $uri $uri/ @nextjs;
+    }
+    
+    # Fallback for Next.js client-side routing
+    location @nextjs {
+        proxy_pass http://frontend:3000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-Host $host;
+        proxy_set_header X-Forwarded-Server $host;
+    }
+
+    # Next.js static files and assets
+    location /_next/ {
+        proxy_pass http://frontend:3000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        
+        # Cache static assets
+        expires 1y;
+        add_header Cache-Control "public, immutable";
     }
 
     # User Service API
@@ -58,13 +95,13 @@ server {
     }
 
     # MongoDB Express Admin Interface (if localdb profile is used)
-    location /admin/ {
-        proxy_pass http://mongo-express:8081/;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
+    # location /admin/ {
+    #     proxy_pass http://mongo-express:8081/;
+    #     proxy_set_header Host $host;
+    #     proxy_set_header X-Real-IP $remote_addr;
+    #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    #     proxy_set_header X-Forwarded-Proto $scheme;
+    # }
 
     # Health check endpoint
     location /health {
