--- a/api-gateway/default.conf
+++ b/api-gateway/default.conf
@@ -94,6 +94,17 @@ server {
         }
     }
 
+    location /api/collab {
+        proxy_pass http://collab-service:8000/api/sessions;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        if ($request_method = 'OPTIONS') {
+            return 204;
+        }
+    }
+
     # MongoDB Express Admin Interface (if localdb profile is used)
     # location /admin/ {
     #     proxy_pass http://mongo-express:8081/;
@@ -116,10 +127,6 @@ server {
         return 501 '{"message": "Matching service not yet implemented"}';
     }
 
-    location /api/collab/ {
-        default_type application/json;
-        return 501 '{"message": "Collaboration service not yet implemented"}';
-    }
 
     #error_page  404              /404.html;
 
