--- a/collab-service/package.json
+++ b/collab-service/package.json
@@ -13,6 +13,10 @@
   "dependencies": {
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
+    "redis": "^5.8.2",
     "zod": "^4.1.9"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
   }
 }
