--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,6 +57,9 @@ services:
     build:
       context: ./collab-service
       dockerfile: Dockerfile
+    volumes:
+      - ./collab-service:/app
+    command: npx nodemon server.js
     env_file:
       - ./collab-service/.env
 
@@ -86,6 +89,23 @@ services:
     profiles:
       - localdb # Only runs with --profile localdb
 
+  redis-collab-service:
+    image: redis:latest
+    container_name: collab-redis
+    command:
+      [
+        "redis-server",
+        "--requirepass",
+        "${REDIS_PASSWORD}",
+        "--appendonly",
+        "yes",
+      ]
+    env_file:
+      - ./collab-service/.env
+    volumes:
+      - redis-data-collab-service:/data
+
 # Named volumes for data persistence
 volumes:
   mongodb-data-user-services:
+  redis-data-collab-service:
