--- a/api-gateway/default.conf
+++ b/api-gateway/default.conf
@@ -95,7 +95,7 @@ server {
     }
 
     location /api/collab {
-        proxy_pass http://collab-service:8000/api/sessions;
+        proxy_pass http://collab-service:8000/api;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
