--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,8 @@
+# AI Assistance Disclosure:
+# Tool: ChatGPT (GPT 5.0), date: 2025-09-19
+# Purpose: To understand how to add password to redis container
+# Author Review: I validated security and performance of the setup.
+
 # PeerPrep Docker Compose Configuration
 # TODO: when deploying to production, switch to using images from Docker Hub -> using 'image' and 'pull_policy' and remove 'build' sections
 services:
