--- a/user-service/.env.sample
+++ b/user-service/.env.sample
@@ -1,5 +1,5 @@
 DB_CLOUD_URI=<CONNECTION_STRING>
-DB_LOCAL_URI=mongodb://root:example@mongodb-user-services:27017
+DB_LOCAL_URI=mongodb://root:example@localhost:27017
 PORT=4000
 
 # Will use cloud MongoDB Atlas database
