--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,9 @@
     "react-icons": "^5.5.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
+    "y-monaco": "^0.1.6",
+    "y-protocols": "^1.0.6",
+    "yjs": "^13.6.27",
     "zod": "^4.1.5"
   },
   "devDependencies": {
