--- a/api-gateway/default.conf
+++ b/api-gateway/default.conf
@@ -95,7 +95,7 @@ server {
     }
 
     location /api/collab {
-        proxy_pass http://collab-service:8000/api;
+        proxy_pass http://collab-service:8000/api/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -103,6 +103,13 @@ server {
         if ($request_method = 'OPTIONS') {
             return 204;
         }
+    }
+
+    location /collab-socket {
+        proxy_pass http://collab-service:8000/;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "Upgrade";
     }
 
     # MongoDB Express Admin Interface (if localdb profile is used)
