--- a/api-gateway/default.conf
+++ b/api-gateway/default.conf
@@ -1,4 +1,9 @@
 # AI Assistance Disclosure:
+# Tool: GitHub Copilot (model: Claude Sonnet 4), date: 2025-09-24
+# Purpose: To update Nginx configuration with verification routes for email verification functionality.
+# Author Review: I validated correctness, security, and performance of the configuration.
+
+# AI Assistance Disclosure:
 # Tool: GitHub Copilot (model: Claude Sonnet 4), date: 2025-09-16
 # Purpose: To configure Nginx reverse proxy for PeerPrep frontend and user service with proper routing, CORS handling, and Next.js client-side navigation support.
 # Author Review: I validated correctness, security, and performance of the configuration.
@@ -78,6 +83,25 @@ server {
     # Auth Service API  
     location /api/auth/ {
         proxy_pass http://user-service:4000/auth/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        
+        # Handle CORS if needed
+        add_header Access-Control-Allow-Origin *;
+        add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS";
+        add_header Access-Control-Allow-Headers "Content-Type, Authorization";
+        
+        # Handle preflight OPTIONS requests
+        if ($request_method = 'OPTIONS') {
+            return 204;
+        }
+    }
+
+    # Verification Service API
+    location /api/verification/ {
+        proxy_pass http://user-service:4000/verification/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
