--- a/user-service/.env.sample
+++ b/user-service/.env.sample
@@ -14,5 +14,5 @@ SMTP_PORT=587
 SMTP_SECURE=false
 SMTP_USER=yourgmail@gmail.com
 SMTP_PASS=<app-password>
-MAIL_FROM="Your App" <yourgmail@gmail.com>
+MAIL_FROM=<yourgmail@gmail.com>
 
