--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "build:user-service": "echo 'No build step for user-service'",
     "install:all": "npm install && cd frontend && npm install && cd ../user-service && npm install",
     "clean": "cd frontend && rm -rf node_modules && cd ../user-service && rm -rf node_modules && rm -rf node_modules",
-    "localdb": "docker-compose up mongodb-user-services mongo-express -d"
+    "localdb": "docker-compose up mongodb-user-services mongo-express -d",
+    "stop:docker": "docker-compose --profile localdb down",
+    "docker:localdb": "docker-compose --profile localdb up -d"
   },
   "devDependencies": {
     "concurrently": "^8.2.2"
