Move frontend out of api gateway

--- a/api-gateway/default.conf
+++ b/api-gateway/default.conf
@@ -1,4 +1,9 @@
 # AI Assistance Disclosure:
+# Tool: GitHub Copilot (model: Claude Sonnet 4), date: 2025-10-13
+# Purpose: To remove frontend proxying from API Gateway configuration, keeping only API service routing for separate frontend deployment.
+# Author Review: I validated correctness, security, and performance of the configuration.
+
+# AI Assistance Disclosure:
 # Tool: GitHub Copilot (model: Claude Sonnet 4), date: 2025-09-24
 # Purpose: To update Nginx configuration with verification routes for email verification functionality.
 # Author Review: I validated correctness, security, and performance of the configuration.
@@ -15,50 +20,10 @@ server {
 
     #access_log  /var/log/nginx/host.access.log  main;
 
-    # Frontend - Main application
+    # Default location - API Gateway only serves API routes
     location / {
-        proxy_pass http://frontend:3000;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        
-        # WebSocket support for Next.js dev mode
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
-        
-        # Next.js specific headers for proper routing
-        proxy_set_header X-Forwarded-Host $host;
-        proxy_set_header X-Forwarded-Server $host;
-        proxy_redirect off;
-        
-        # Ensure proper handling of Next.js routes
-        try_files $uri $uri/ @nextjs;
-    }
-    
-    # Fallback for Next.js client-side routing
-    location @nextjs {
-        proxy_pass http://frontend:3000;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header X-Forwarded-Host $host;
-        proxy_set_header X-Forwarded-Server $host;
-    }
-
-    # Next.js static files and assets
-    location /_next/ {
-        proxy_pass http://frontend:3000;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        
-        # Cache static assets
-        expires 1y;
-        add_header Cache-Control "public, immutable";
+        return 404 '{"error": "Not Found", "message": "This is an API Gateway. Frontend is served separately."}';
+        add_header Content-Type application/json;
     }
 
     # User Service API
