--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,8 +27,6 @@ services:
 
   # Frontend Next.js Application
   # Scalable service with port range mapping
-  # container_name is omitted for scaling
-  # which is important for peerprep where we do matching
   frontend:
     image: honeydews/frontend
     pull_policy: never
@@ -36,9 +34,8 @@ services:
       context: ./frontend
       dockerfile: Dockerfile
       target: runner # Production build target
-    # Remove external port exposure - accessed via API Gateway
-    expose:
-      - "3000" # Internal port only
+    ports:
+      - "3000:3000" # Expose frontend on localhost:3000
     environment:
       - NODE_ENV=production # Set Node.js to production mode
 
@@ -82,8 +79,6 @@ services:
       - ./collab-service/.env
     environment:
       - REDIS_HOST=redis-collab-service
-
-  ### NOTE: LOCAL DATABASE SERVICES YET TO BE TESTED BY ME DO NOT USE YET ###
 
   # MongoDB Database for User Services
   mongodb-user-services:
