Fix all the wrong changes i made previously...

--- a/api-gateway/default.conf
+++ b/api-gateway/default.conf
@@ -34,10 +34,16 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         
-        # Handle CORS if needed
-        add_header Access-Control-Allow-Origin *;
-        add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS";
-        add_header Access-Control-Allow-Headers "Content-Type, Authorization";
+        # CORS - Always replace headers, don't append
+        proxy_hide_header Access-Control-Allow-Origin;
+        proxy_hide_header Access-Control-Allow-Methods;
+        proxy_hide_header Access-Control-Allow-Headers;
+        proxy_hide_header Access-Control-Allow-Credentials;
+
+        add_header Access-Control-Allow-Origin '${FRONTEND_BASE_URL}' always;
+        add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS" always;
+        add_header Access-Control-Allow-Headers "Content-Type, Authorization, Cookie" always;
+        add_header Access-Control-Allow-Credentials 'true' always;
         
         # Handle preflight OPTIONS requests
         if ($request_method = 'OPTIONS') {
@@ -53,10 +59,16 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         
-        # Handle CORS if needed
-        add_header Access-Control-Allow-Origin *;
-        add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS";
-        add_header Access-Control-Allow-Headers "Content-Type, Authorization";
+        # CORS - Always replace headers, don't append
+        proxy_hide_header Access-Control-Allow-Origin;
+        proxy_hide_header Access-Control-Allow-Methods;
+        proxy_hide_header Access-Control-Allow-Headers;
+        proxy_hide_header Access-Control-Allow-Credentials;
+
+        add_header Access-Control-Allow-Origin '${FRONTEND_BASE_URL}' always;
+        add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS" always;
+        add_header Access-Control-Allow-Headers "Content-Type, Authorization, Cookie" always;
+        add_header Access-Control-Allow-Credentials 'true' always;
         
         # Handle preflight OPTIONS requests
         if ($request_method = 'OPTIONS') {
@@ -67,11 +79,21 @@ server {
     # Verification Service API
     location /api/verification/ {
         proxy_pass http://user-service:4000/verification/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
 
-        # Handle CORS if needed
-        add_header Access-Control-Allow-Origin *;
-        add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS";
-        add_header Access-Control-Allow-Headers "Content-Type, Authorization";
+        # CORS - Always replace headers, don't append
+        proxy_hide_header Access-Control-Allow-Origin;
+        proxy_hide_header Access-Control-Allow-Methods;
+        proxy_hide_header Access-Control-Allow-Headers;
+        proxy_hide_header Access-Control-Allow-Credentials;
+
+        add_header Access-Control-Allow-Origin '${FRONTEND_BASE_URL}' always;
+        add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS" always;
+        add_header Access-Control-Allow-Headers "Content-Type, Authorization, Cookie" always;
+        add_header Access-Control-Allow-Credentials 'true' always;
         
         # Handle preflight OPTIONS requests
         if ($request_method = 'OPTIONS') {
@@ -86,6 +108,16 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
 
+        # CORS - Always replace headers, don't append
+        proxy_hide_header Access-Control-Allow-Origin;
+        proxy_hide_header Access-Control-Allow-Methods;
+        proxy_hide_header Access-Control-Allow-Headers;
+        proxy_hide_header Access-Control-Allow-Credentials;
+        add_header Access-Control-Allow-Origin '${FRONTEND_BASE_URL}' always;
+        add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS" always;
+        add_header Access-Control-Allow-Headers "Content-Type, Authorization, Cookie" always;
+        add_header Access-Control-Allow-Credentials 'true' always;
+
         if ($request_method = 'OPTIONS') {
             return 204;
         }
@@ -98,20 +130,34 @@ server {
         proxy_set_header Connection "Upgrade";
     }
 
+    location /api/matching/ {
+        proxy_pass http://matching-service:3002/matching/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+
+        # CORS - Always replace headers, don't append
+        proxy_hide_header Access-Control-Allow-Origin;
+        proxy_hide_header Access-Control-Allow-Methods;
+        proxy_hide_header Access-Control-Allow-Headers;
+        proxy_hide_header Access-Control-Allow-Credentials;
+        add_header Access-Control-Allow-Origin '${FRONTEND_BASE_URL}' always;
+        add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS" always;
+        add_header Access-Control-Allow-Headers "Content-Type, Authorization, Cookie" always;
+        add_header Access-Control-Allow-Credentials 'true' always;
+
+        if ($request_method = 'OPTIONS') {
+            return 204;
+        }
+    }
+
     # Health check endpoint
     location /health {
         access_log off;
         return 200 '{"status": "healthy", "timestamp": "$time_iso8601"}';
         add_header Content-Type application/json;
     }
-
-    location /api/matching/ {
-        proxy_pass http://matching-service:3002/matching/;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    }
-
 
     #error_page  404              /404.html;
 
