Set up live reload for every single services and new npm run dev shortcut

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,9 +3,57 @@
 # Purpose: To understand how to add password to redis container
 # Author Review: I validated security and performance of the setup.
 
+# =============================================================================
+# PEERPREP DOCKER COMPOSE - HYBRID DEVELOPMENT SETUP
+# =============================================================================
+#
+# 🔥 LIVE RELOAD ENABLED FOR MICROSERVICES ONLY
+# 
+# ARCHITECTURE:
+# ├── 🌐 Frontend (Next.js) - Runs via NPM DEV (host machine)
+# ├── 🚀 Microservices - Run via DOCKER with live reload
+# ├── 🔧 API Gateway (Nginx) - Docker (no live reload needed)
+# └── 💾 Databases - Docker
+#
+# WHY HYBRID APPROACH:
+# ✅ Frontend: Best HMR performance outside Docker
+# ✅ Microservices: Consistent environment with live reload
+# ✅ Databases: Isolated and persistent in Docker
+#
+# 🔄 LIVE RELOAD FEATURES:
+# 📦 MICROSERVICES:
+#   ✅ Nodemon automatic restart on file changes
+#   ✅ Source code mounted as volumes for instant updates
+#   ✅ Development mode with detailed error messages
+#   ✅ Direct port access for debugging (4000, 3002, 4001)
+#
+# 📱 FRONTEND (via npm dev):
+#   ✅ Next.js Hot Module Replacement
+#   ✅ Fast Refresh for React components
+#   ✅ Optimized file watching on host machine
+#
+# 🚫 NO LIVE RELOAD:
+#   - API Gateway (Nginx) - Static config, rarely changes
+#   - Databases - No source code to reload
+#
+# DEVELOPMENT WORKFLOW:
+# 1. Run: npm run dev
+#    └── Starts Docker microservices + Frontend npm dev concurrently
+# 2. Edit microservice code → Auto-restart in Docker
+# 3. Edit frontend code → Hot reload via Next.js
+# 4. All services communicate via API Gateway on localhost
+#
+# COMMANDS:
+# - npm run dev              → Full development stack
+# - npm run dev:microservices → Only Docker services
+# - npm run dev:frontend     → Only Next.js frontend
+# - npm run dev:with-db      → Include local database
+#
+# =============================================================================
+
 # PeerPrep Docker Compose Configuration
 services:
-  # API Gateway - Routes all external traffic
+  # API Gateway - Routes all external traffic (NO LIVE RELOAD - Production nginx)
   api-gateway:
     image: honeydews/api-gateway:latest
     pull_policy: never
@@ -16,74 +64,92 @@ services:
       - "80:80" # HTTP traffic
       - "443:443" # HTTPS traffic (if configured)
     depends_on:
-      - frontend
       - user-service
       - matching-service
+      - collab-service
     environment:
-      - FRONTEND_URL=http://frontend:3000
+      - FRONTEND_URL=http://host.docker.internal:3000 # Frontend runs on host via npm dev
       - USER_SERVICE_URL=http://user-service:4000
       - MATCHING_SERVICE_URL=http://matching-service:3002
       - COLLAB_SERVICE_URL=http://collab-service:4001
       - FRONTEND_BASE_URL=http://localhost:3000
 
-  # Frontend Next.js Application
-  # Scalable service with port range mapping
-  frontend:
-    image: honeydews/frontend
-    pull_policy: never
-    build:
-      context: ./frontend
-      dockerfile: Dockerfile
-      target: runner # Production build target
-    ports:
-      - "3000:3000" # Expose frontend on localhost:3000
-    environment:
-      - API_GATEWAY_BASE_URL=http://localhost
-      - FRONTEND_BASE_URL=http://localhost:3000
-      - USER_SERVICE_URL=http://user-service:4000 
-      - NODE_ENV=production # Set Node.js to production mode
+  # Frontend Next.js Application - RUNS VIA NPM DEV (not Docker)
+  # The frontend will be started separately using "npm run dev:frontend"
+  # This allows for optimal Next.js hot reload performance outside of Docker
+  # frontend:
+  #   (Frontend runs via npm dev for better HMR performance)
 
+  # User Service - DEVELOPMENT MODE WITH LIVE RELOAD
   user-service:
     image: foochao/user-service
     pull_policy: never
     build:
       context: ./user-service
       dockerfile: Dockerfile
-      # Use the runner stage from the multi-stage Dockerfile (not production)
-      target: runner
-    # Remove external port exposure - accessed via API Gateway
-    expose:
-      - "4000" # Internal port only
+      target: base # Use base target and install deps manually
+    ports:
+      - "4000:4000" # Expose for direct access during development
+    volumes:
+      # Mount source code for live reload - container will restart on file changes
+      - ./user-service:/app:cached
+      # Exclude node_modules to prevent conflicts
+      - /app/node_modules
+    working_dir: /app
     env_file:
       - ./user-service/.env # Environment variables for user-service
     environment:
       - DB_LOCAL_URI=mongodb://root:example@mongodb-user-services:27017 # Override for container
       - API_GATEWAY_BASE_URL=http://localhost
       - FRONTEND_BASE_URL=http://localhost:3000
+      - NODE_ENV=development # Development mode for better error messages
+    command: ["/bin/sh", "-c", "npm install && npx nodemon --legacy-watch --polling-interval 1000 server.js"] # Install deps and run with polling for Windows/WSL2
 
+  # Matching Service - DEVELOPMENT MODE WITH LIVE RELOAD
   matching-service:
     image: yc17003/matching-service
     pull_policy: never
     build:
       context: ./matching-service
       dockerfile: Dockerfile
-    expose:
-      - "3002"
+      target: base # Use base target and install deps manually
+    ports:
+      - "3002:3002" # Expose for direct access during development
+    volumes:
+      # Mount source code for live reload
+      - ./matching-service:/app:cached
+      # Exclude node_modules to prevent conflicts
+      - /app/node_modules
+    working_dir: /app
     env_file:
       - ./matching-service/.env
     environment:
       - REDIS_HOST=redis://redis-matching-service:6379
+      - NODE_ENV=development # Development mode
+    command: ["/bin/sh", "-c", "npm install && npx nodemon --legacy-watch --polling-interval 1000 server.js"] # Install deps and run with polling for Windows/WSL2
 
+  # Collaboration Service - DEVELOPMENT MODE WITH LIVE RELOAD
   collab-service:
     image: cjz/collab-service
     pull_policy: never
     build:
       context: ./collab-service
       dockerfile: Dockerfile
+      # No target specified - uses default single-stage build
+    ports:
+      - "4001:4001" # Expose for direct access during development  
+    volumes:
+      # Mount source code for live reload (adjust paths based on actual structure)
+      - ./collab-service:/app:cached
+      # Exclude node_modules to prevent conflicts
+      - /app/node_modules
+    working_dir: /app
     env_file:
       - ./collab-service/.env
     environment:
       - REDIS_HOST=redis-collab-service
+      - NODE_ENV=development # Development mode
+    command: ["/bin/sh", "-c", "npm install && npx nodemon --legacy-watch --polling-interval 1000 server.js"] # Install deps and run with polling for Windows/WSL2
 
   # MongoDB Database for User Services
   mongodb-user-services:
