--- a/package.json
+++ b/package.json
@@ -4,20 +4,26 @@
   "version": "1.0.0",
   "description": "PeerPrep - Collaborative coding interview platform",
   "scripts": {
-    "dev": "concurrently \"npm run dev:frontend\" \"npm run dev:user-service\"",
+    "dev": "concurrently \"npm run dev:docker\" \"npm run dev:frontend\"",
+    "dev:docker": "docker compose up api-gateway user-service matching-service collab-service redis-collab-service redis-matching-service --build",
     "dev:frontend": "cd frontend && npm run dev",
-    "dev:user-service": "cd user-service && npm run dev",
+    "dev:microservices": "docker compose up user-service matching-service collab-service redis-collab-service redis-matching-service --build",
+    "dev:with-db": "concurrently \"npm run dev:docker\" \"npm run dev:frontend\" \"npm run localdb\"",
     "start": "concurrently \"npm run start:frontend\" \"npm run start:user-service\"",
     "start:frontend": "cd frontend && npm run start",
     "start:user-service": "cd user-service && npm run start",
     "build": "npm run build:frontend && npm run build:user-service",
     "build:frontend": "cd frontend && npm run build",
     "build:user-service": "echo 'No build step for user-service'",
-    "install:all": "npm install && cd frontend && npm install && cd ../user-service && npm install",
-    "clean": "cd frontend && rm -rf node_modules && cd ../user-service && rm -rf node_modules && rm -rf node_modules",
-    "localdb": "docker-compose up mongodb-user-services mongo-express -d",
-    "stop:docker": "docker-compose --profile localdb down",
-    "docker:localdb": "docker-compose --profile localdb up -d"
+    "install:all": "npm install && cd frontend && npm install && cd ../user-service && npm install && cd ../matching-service && npm install && cd ../collab-service && npm install",
+    "clean": "cd frontend && rm -rf node_modules && cd ../user-service && rm -rf node_modules && cd ../matching-service && rm -rf node_modules && cd ../collab-service && rm -rf node_modules && rm -rf node_modules",
+    "localdb": "docker compose --profile localdb up mongodb-user-services mongo-express -d",
+    "stop:docker": "docker compose down && docker compose --profile localdb down",
+    "docker:localdb": "docker compose --profile localdb up -d",
+    "logs": "docker compose logs -f",
+    "logs:user": "docker compose logs -f user-service",
+    "logs:matching": "docker compose logs -f matching-service",
+    "logs:collab": "docker compose logs -f collab-service"
   },
   "devDependencies": {
     "concurrently": "^8.2.2"
