--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "_aiCredits": "Root package.json with concurrently scripts created with GitHub Copilot assistance - 2025-09-15",
+  "_aiCredits": "Root package.json with concurrently scripts created with GitHub Copilot assistance - 2025-09-15. Live reload development scripts enhanced with GitHub Copilot assistance - 2025-10-13",
   "name": "peerprep",
   "version": "1.0.0",
   "description": "PeerPrep - Collaborative coding interview platform",
